feat(STOCK-20) a bit of refactoring stock-service